# circuit-sim

./: .buildinfo  .coveragerc  .flake8  .gitignore  README.md  codecov.yml  data_sets.ini  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  simulate_module.py  test_main.py
.doctrees/: environment.pickle  index.doctree
.doctrees/files/: analysis.doctree  circuit_sim.doctree
.github/: dependabot.yml
.github/workflows/: build-pages.yml  check_code.yml  do-everything.yml
_sources/: index.rst.txt
_sources/files/: analysis.rst.txt  circuit_sim.rst.txt
circuit_sim/: __init__.py  analysis.py  cell_2.lib  circuit_sim.py  data_sets.ini  main.py
docs/: Make_Docs.bat  build.sh
docs/source/: conf.py
files/: analysis.html  circuit_sim.html
src/: __init__.py  main.py  test_main.py
tests/: test_main.py
